# flutter_magtek_package

./: .metadata  .pubignore  ANDROID_SETUP.md  CHANGELOG.md  LICENSE  PUBLISHING.md  README.md  SETUP.md  WEB_SETUP.md  WINDOWS_SETUP.md  install.ps1  install.sh  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
android/src/main/kotlin/com/example/magtek_card_reader/: AndroidUsbDeviceManager.kt  MagtekCardReaderPlugin.kt
android/src/main/kotlin/dev/magtek/card_reader/: AndroidUsbDeviceManager.kt  MagtekCardReaderPlugin.kt
android/src/test/kotlin/com/example/magtek_card_reader/: MagtekCardReaderPluginTest.kt
android/src/test/kotlin/dev/magtek/card_reader/: MagtekCardReaderPluginTest.kt
example/: README.md  pubspec.yaml
example/android/app/: build.gradle
example/android/app/src/main/: AndroidManifest.xml
example/android/app/src/main/kotlin/com/example/magtek_card_reader_example/: MainActivity.kt
example/android/app/src/main/res/xml/: usb_device_filter.xml
example/integration_test/: plugin_integration_test.dart
example/lib/: main.dart
example/linux/: CMakeLists.txt  my_application.cc
example/linux/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/test/: widget_test.dart
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugin_registrant.cc  generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
lib/: magtek_card_reader.dart  magtek_card_reader_method_channel.dart  magtek_card_reader_platform_interface.dart  magtek_card_reader_web.dart
lib/src/exceptions/: magtek_exceptions.dart
lib/src/models/: card_data.dart  device_info.dart  track_data.dart
linux/: CMakeLists.txt  magtek_card_reader_plugin.cc  magtek_card_reader_plugin_private.h  usb_device_manager.cc  usb_device_manager.h
linux/include/magtek_card_reader/: magtek_card_reader_plugin.h
linux/test/: magtek_card_reader_plugin_test.cc
test/: magtek_card_reader_method_channel_test.dart  magtek_card_reader_test.dart
udev/: 99-magtek.rules
windows/: CMakeLists.txt  magtek_card_reader_plugin.cpp  magtek_card_reader_plugin.h  magtek_card_reader_plugin_c_api.cpp  windows_usb_device_manager.cpp  windows_usb_device_manager.h
windows/include/magtek_card_reader/: magtek_card_reader_plugin_c_api.h
windows/test/: magtek_card_reader_plugin_test.cpp
